UI improvements - fixed add menu flashing - removed dnd from addbar and changed z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 	:root {
 		--background: 0 0% 100%;
 		--foreground: 240 10% 3.9%;
+		--addbar: 217 217 222;
 		--card: 0 0% 100%;
 		--card-foreground: 240 10% 3.9%;
 		--popover: 0 0% 100%;
@@ -29,6 +30,7 @@
 	.dark {
 		--background: 240 10% 3.9%;
 		--foreground: 0 0% 98%;
+		--addbar: 217, 217, 222;
 		--card: 240 10% 3.9%;
 		--card-foreground: 0 0% 98%;
 		--popover: 240 10% 3.9%;
